# blipcpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.ini  issueTracker.txt  main.cpp  scripts.sh
config/: config_watcher_darwin.cpp  config_watcher_linux.cpp  editor.cpp  editor_config.cpp  watcher_darwin.cpp  watcher_linux.cpp
editor/: app.cpp
include/blip/app/: main.hpp
include/blip/buffer/: buffer.hpp  table.hpp
include/blip/config/: editor.hpp
include/blip/core/: log.hpp
include/blip/platform/: system.hpp  watcher.hpp
include/blip/text/: font_manager.hpp
include/blip/ui/: renderer.hpp
include/config/: editor.hpp  editor_config.hpp  watcher.hpp
include/editor/: app.hpp
include/logging/: log.hpp
logging/: log.cpp
src/app/: main.cpp
src/buffer/: buffer.cpp  table.cpp
src/config/: editor.cpp
src/core/: log.cpp
src/platform/darwin/: system.cpp  watcher.cpp
src/platform/linux/: system.cpp  watcher.cpp
src/tests/: buffer.cpp  table.cpp  tests.cpp
src/text/: font_manager.cpp
src/ui/: renderer.cpp
